--- a/templates/zhihu/explore.html
+++ b/templates/zhihu/explore.html
@@ -2,7 +2,7 @@
 
 {% block title %}发现-知乎儿{% endblock %}
 
-{% block nav_home_active %}active{% endblock %}
+{% block explore %}active{% endblock %}
 
 {% block content %}
 
