--- a/templates/zhihu/topic_list.html
+++ b/templates/zhihu/topic_list.html
@@ -2,7 +2,7 @@
 
 {% block title %}话题广场-知乎儿{% endblock %}
 
-{% block nav_home_active %}active{% endblock %}
+{% block topic %}active{% endblock %}
 
 {% block content %}
 
