--- a/static/css/zhihu.css
+++ b/static/css/zhihu.css
@@ -49,6 +49,10 @@ h4 {
     padding: 10px 0;
     border-bottom: 1px dotted #ddd;
 }
+.topic-question-item {
+    padding: 0 0 10px 0;
+    border-bottom: 1px dotted #ddd;
+}
 
 .answer-item {
     padding: 10px;
@@ -119,11 +123,6 @@ h3.big-topic {
     font-weight: 600;
 }
 
-
-.strong {
-    font-weight: bold;
-}
-
 .question-detail {
     padding: 20px;
     background: #ffffff;
@@ -184,4 +183,9 @@ h3.big-topic {
 
 .form-input {
     margin-bottom: 20px;
+}
+
+.comment-content {
+    margin-top: 10px;
+    margin-left: 24px;
 }
