--- a/templates/zhihu/follow_topic_user.html
+++ b/templates/zhihu/follow_topic_user.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{ topic.name }} 话题活跃回答者-知乎儿{% endblock %}
+{% block title %}关注 {{ topic.name }} 话题的人-知乎儿{% endblock %}
 
 {% block topic %}active{% endblock %}
 
@@ -16,25 +16,25 @@
             <h4 class="media-heading"><a href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a></h4>
             <ul class="breadcrumb">
               <li><a href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a></li>
-              <li class="active">活跃回答者</li>
+              <li class="active">{{ topic.get_user_nums }} 人关注该话题</li>
             </ul>
           </div>
         </div>
         <hr>
-        {% for user in page.object_list %}
+        {% for user in topic_users_page.object_list %}
         <div class="user-item">
           <div class="media">
             <a target="_blank" href="{% url 'user_home' user.id %}" class="media-left"><img width="60" src="{{ MEDIA_URL }}{{ user.image }}" alt="" class="media-object"></a>
             <div class="media-body">
               <h4 class="media-heading"><a target="_blank" href="{% url 'user_home' user.id %}">{{ user.nickname }}</a></h4>
               <p class="text-muted">{{ user.description|default_if_none:'' }}</p>
-              <p class="text-muted">在该话题下有 {{ user.user_answer_nums }} 个回答, {{ user.user_answer_follow_nums }} 赞同</p>
+              <p class="text-muted">{% if user.answer_nums %}回答了 {{ user.answer_nums }} 个回答{% else %}还没回答问题{% endif %}</p>
             </div>
           </div>
         </div>
         {% endfor %}
 
-        {% include 'zhihu/paginator.html' with page=page %}
+        {% include 'zhihu/paginator.html' with page=topic_users_page %}
       </div>
     </div>
 
