--- a/templates/zhihu/topic_list.html
+++ b/templates/zhihu/topic_list.html
@@ -13,7 +13,7 @@
         <h4>话题广场</h4>
         <hr>
         {% if request.user.is_authenticated %}
-        <p>已关注 {{ request.user.get_topic_nums }} 个话题</p>
+        <p>你已关注 {{ request.user.get_topic_nums }} 个话题</p>
 
         <div class="user-topic">
         {% for topic in request.user.topic_set.all %}
