--- a/templates/user/user_collect_answer.html
+++ b/templates/user/user_collect_answer.html
@@ -11,14 +11,14 @@
   <a href="{% url 'question_detail' answer.question_id %}"><h3>{{ answer.question.title }}</h3></a>
   {% if answer.is_anonymous %}
   <div class="media">
-    <div class="media-left"><img width="24px" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
+    <div class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
     <div class="media-body">
       <h4 class="media-heading text-muted">匿名回答</h4>
     </div>
   </div>
   {% else %}
   <div class="media">
-    <a href="{% url 'user_home' answer.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ answer.author.image }}" alt="头像" class="media-object"></a>
+    <a href="{% url 'user_home' answer.author_id %}" class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}{{ answer.author.image }}" alt="头像" class="media-object"></a>
     <div class="media-body">
       <h4 class="media-heading"><a href="{% url 'user_home' answer.author_id %}">{{ answer.author.nickname }}</a></h4>
       <p class="text-muted">{{ author.description|default_if_none:'' }}</p>
