--- a/static/css/zhihu.css
+++ b/static/css/zhihu.css
@@ -1,7 +1,21 @@
+html {
+    position: relative;
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+}
+
 body { 
+    background: #f5f7f9;
     padding-top: 70px;
-    font-family: "Microsoft YaHei", sans-serif;
-    background: #f5f7f9
+    margin-bottom: 80px; /*空间预留给footer, 大于等于footer的高度*/
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
 }
 
 .navbar-default {
@@ -133,10 +147,11 @@ h3.big-topic {
     font-weight: 600;
     color: #333;
 }
-.question-info {
-    padding-top:40px;
-    font-size: 16px;
-    font-weight: bold;
+.question-right {
+    margin-top: 30%;
+    margin-bottom: 20px;
+    float: left;
+    width: 50%;
 }
 
 .container-fluit {
@@ -188,4 +203,11 @@ h3.big-topic {
 .comment-content {
     margin-top: 10px;
     margin-left: 24px;
+}
+
+#back-to-top {
+    position: fixed;
+    right: 80px;
+    bottom: 30px;
+    cursor: pointer;
 }
