--- a/templates/user/edit_profile.html
+++ b/templates/user/edit_profile.html
@@ -20,14 +20,14 @@
 
         <h3>个人资料</h3>
         <hr>
-        <form action="{% url 'edit_profile' %}" method="post">
+        <form action="{% url 'edit_profile' %}" id="profile-form" method="post">
           {% csrf_token %}
           
           <div class="row form-input">
             <div class="form-group">
               <label for="id_nickname" class="control-label col-sm-2">昵称</label>
               <div class="col-sm-6">
-                <input type="text" name="nickname" maxlength="40" class="form-control" id="id_nickname" value="{{ request.user.nickname }}" />
+                <input type="text" name="nickname" required minlength="4" maxlength="40" class="form-control" id="id_nickname" value="{{ request.user.nickname }}" />
               </div>
             </div>
           </div>
@@ -71,7 +71,7 @@
       <div class="site-box">
         <h3>修改头像</h3>
         <hr>
-        <form action="{% url 'update_image' %}" class="form-inline form-input" enctype="multipart/form-data" method="post">
+        <form action="{% url 'update_image' %}" id="user-image" class="form-inline form-input" enctype="multipart/form-data" method="post">
           {% csrf_token %}
           
           <div class="form-group">
@@ -83,11 +83,11 @@
         <div class="row">
           <div class="col-sm-5 col-sm-offset-1">
           <p>当前头像:</p>
-          <img width="200" src="{{ MEDIA_URL }}{{ request.user.image }}" alt="">
+          <img id="now-img" width="200" height="200" src="{{ MEDIA_URL }}{{ request.user.image }}" alt="">
           </div>
           <div class="col-sm-5 col-sm-offset-1">
           <p id="preview-text">新头像预览:</p>
-          <img id="preview-img" width="200" src="" alt="">
+          <img id="preview-img" width="200" height="200" src="" alt="">
           </div>
         </div>
     
@@ -113,6 +113,40 @@
 {% block custom_js %}
 <script>
 
+  $(function () {
+    // 修改个人资料
+    var old_form_data = $('#profile-form').serializeArray();
+    $('#profile-form').on('submit', function(event) {
+      event.preventDefault();
+      var now_form_data = $('#profile-form').serializeArray();
+      var change = false;
+      for (i=1; i<old_form_data.length; i++) {
+        if (old_form_data[i].value != now_form_data[i].value) {
+          change = true;
+          break;
+        };       
+      };
+      if (!change) {
+        alert('你的个人资料没有任何修改, 无需提交');
+        return;
+      }
+      $.ajax({
+        cache:false,
+        type:'POST',
+        url:"{% url 'edit_profile' %}",
+        data:$('#profile-form').serialize(),
+        async:true,
+        success:function(data) {
+          if(data.status == 'success') {
+            alert('你的个人资料已修改');
+          }else if(data.status == 'fail') {
+            alert(data.message);
+          }
+        },
+      });
+    });
+  });
+
   // 选择图片后预览
   function upload_image(obj) {
     var preview_img = $('#preview-img');
@@ -123,12 +157,14 @@
     }
     var file = obj.files[0];
     if (file.type != 'image/jpeg' && file.type != 'image/png' && file.type != 'image/gif') {
+      obj.value = '';
       alert('不是有效的图片文件');
-      return;
+      return false;
     }
     if (file.size > 1024*1024) {
+      obj.value = '';
       alert('你的文件超过1M');
-      return;
+      return false;
     }
     // FileReader读取文件
     var reader = new FileReader();
