--- a/templates/user/email/change_email.html
+++ b/templates/user/email/change_email.html
@@ -4,6 +4,6 @@
 
 <p>请点击以下链接确认修改(有效期10分钟):</p>
 
-<p>{% url 'change_email' token %}</p>
+<p>{{ request.get_host }}{% url 'change_email' token %}</p>
 
 <p>该邮件来自知乎儿, 不用回复.</p>
