--- a/templates/user/user_home.html
+++ b/templates/user/user_home.html
@@ -13,7 +13,7 @@
   <p class="text-muted">回答了问题<span class="right-info">{{ obj.pub_time|date:"Y年m月d日" }}</span></p>
   <h3><a href="{% url 'question_detail' obj.question_id %}">{{ obj.question.title }}</a></h3>
   <div class="media">
-    <a href="{% url 'user_home' obj.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ obj.author.image }}" alt="头像" class="media-object"></a>
+    <a href="{% url 'user_home' obj.author_id %}" class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}{{ obj.author.image }}" alt="头像" class="media-object"></a>
     <div class="media-body">
       <h4 class="media-heading"><a href="{% url 'user_home' obj.author_id %}">{{ obj.author.nickname }}</a></h4>
       <p class="text-muted">{{ obj.author.description|default_if_none:'' }}</p>
@@ -43,14 +43,14 @@
   <h3><a href="{% url 'question_detail' obj.answer.question_id %}">{{ obj.answer.question.title }}</a></h3>
   {% if obj.answer.is_anonymous %}
   <div class="media">
-    <div class="media-left"><img width="24px" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
+    <div class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
     <div class="media-body">
       <h4 class="media-heading text-muted">匿名回答</h4>
     </div>
   </div>
   {% else %}
   <div class="media">
-    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ obj.answer.author.image }}" alt="头像" class="media-object"></a>
+    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}{{ obj.answer.author.image }}" alt="头像" class="media-object"></a>
     <div class="media-body">
       <h4 class="media-heading"><a href="{% url 'user_home' obj.answer.author_id %}">{{ obj.answer.author.nickname }}</a></h4>
       <p class="text-muted">{{ obj.author.description|default_if_none:'' }}</p>
@@ -74,14 +74,14 @@
   <h3><a href="{% url 'question_detail' obj.answer.question_id %}">{{ obj.answer.question.title }}</a></h3>
   {% if obj.answer.is_anonymous %}
   <div class="media">
-    <div class="media-left"><img width="24px" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
+    <div class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
     <div class="media-body">
       <h4 class="media-heading text-muted">匿名回答</h4>
     </div>
   </div>
   {% else %}
   <div class="media">
-    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ obj.answer.author.image }}" alt="头像" class="media-object"></a>
+    <a href="{% url 'user_home' obj.answer.author_id %}" class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}{{ obj.answer.author.image }}" alt="头像" class="media-object"></a>
     <div class="media-body">
       <h4 class="media-heading"><a href="{% url 'user_home' obj.answer.author_id %}">{{ obj.answer.author.nickname }}</a></h4>
       <p class="text-muted">{{ obj.author.description|default_if_none:'' }}</p>
