--- a/templates/zhihu/index.html
+++ b/templates/zhihu/index.html
@@ -5,7 +5,6 @@
 {% block home %}active{% endblock %}
 
 {% block content %}
-
 <div class="container">
   {% if messages %}
   <div class="messages">
@@ -22,8 +21,8 @@
         <ul class="nav navbar-nav">
           <li><a href="{% url 'ask_question' %}" target="_blank">提问</a></li>
           <li><a href="{% url 'question_list' %}" target="_blank">回答</a></li>
-          <li><a href="">写文章</a></li>
-          <li><a href="">写想法</a></li>
+          <!-- <li><a href="">写文章</a></li>
+          <li><a href="">写想法</a></li> -->
         </ul>
       </div>
       </div>
@@ -33,14 +32,14 @@
             <p class="text-muted">来自话题:{{ answer.question.get_topic_name }}</p>
             {% if answer.is_anonymous %}
             <div class="media">
-              <div class="media-left"><img width="24px" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
+              <div class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}image/default_user.png" alt="头像" class="media-object"></div>
               <div class="media-body">
                 <h4 class="media-heading text-muted">匿名回答</h4>
               </div>
             </div>
             {% else %}
             <div class="media">
-              <a target="_blank" href="{% url 'user_home' answer.author_id %}" class="media-left"><img width="24px" src="{{ MEDIA_URL }}{{ answer.author.image }}" alt="头像" class="media-object"></a>
+              <a target="_blank" href="{% url 'user_home' answer.author_id %}" class="media-left"><img width="24" height="24" src="{{ MEDIA_URL }}{{ answer.author.image }}" alt="头像" class="media-object"></a>
               <div class="media-body">
                 <h4 class="media-heading"><a target="_blank" href="{% url 'user_home' answer.author_id %}">{{ answer.author.nickname }}</a><small>, {{ answer.author.description }}</small></h4>
               </div>
@@ -79,7 +78,7 @@
       {% endif %}
       <div class="media">
           <a target="_blank" href="{% url 'user_home' request.user.id %}" class="media-left">
-              <img width="60" src="{{ MEDIA_URL }}{{ request.user.image }}" alt="头像" class="media-object">
+              <img width="60" height="60" src="{{ MEDIA_URL }}{{ request.user.image }}" alt="头像" class="media-object">
           </a>
           <div class="media-body">
               <h4 class="media-heading"><a target="_blank" href="{% url 'user_home' request.user.id %}">{{ request.user.nickname }}</a></h4>
