--- a/templates/zhihu/topic_list.html
+++ b/templates/zhihu/topic_list.html
@@ -29,7 +29,7 @@
           {% for topic in page.object_list %}
           <div class="topic-item">
             <div class="meida">
-              <a target="_blank" href="{% url 'topic_detail' topic.id %}" class="media-left"><img width="50" src="{{ MEDIA_URL }}{{ topic.image }}" alt="话题" class="media-object"></a>
+              <a target="_blank" href="{% url 'topic_detail' topic.id %}" class="media-left"><img width="50" height="50" src="{{ MEDIA_URL }}{{ topic.image }}" alt="话题" class="media-object"></a>
               <div class="media-body">
                 <h4 class="media-heading"><a  target="_blank" href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a> 
                   <!-- <span class="text-muted right-info"><a href="{% url 'topic_detail' topic.id %}">关注</a></span> -->
@@ -52,7 +52,7 @@
         <hr>
         {% for topic in hot_topics %}
         <div class="media">
-          <a target="_blank" href="{% url 'topic_detail' topic.id %}" class="media-left"><img width="50" src="{{ MEDIA_URL }}{{ topic.image }}" alt="话题" class="media-object"></a>
+          <a target="_blank" href="{% url 'topic_detail' topic.id %}" class="media-left"><img width="50" height="50" src="{{ MEDIA_URL }}{{ topic.image }}" alt="话题" class="media-object"></a>
           <div class="media-body">
             <p><b><a target="_blank" href="{% url 'topic_detail' topic.id %}">{{ topic.name }}</a></b></p>
             <p class="text-muted">{{ topic.user_nums }} 人关注</p>
